#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(anyfs-tools, 0.84.5b, undefer@gmail.com)
#AM_INIT_AUTOMAKE(anyfs-tools, 0.84.5)
AC_CONFIG_SRCDIR([src/reblock.c], [include/any.h])
AC_CONFIG_HEADER([include/config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for packages.
PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/lib/pkgconfig"
export PKG_CONFIG_PATH
EXT2FS_REQUIRED=1.38
PKG_CHECK_MODULES(EXT2FS, ext2fs >= $EXT2FS_REQUIRED )

PKG_CHECK_MODULES(MPEG2, libmpeg2, \
		MPEG2_MODULES="audio_video2_files_descr.o"; MPEG2C="", \
		MPEG2_LIBS=""; MPEG2_CFLAGS=""; MPEG2_MODULES=""; MPEG2C="//")

need_lib()
{
	echo "Where your -l$1? I can't work without it!"
	exit 1
}

# Checks for libraries.
AC_CHECK_LIB([dl], [dlsym], , need_lib dl)
AC_CHECK_LIB([blkid], [blkid_get_devname], , need_lib blkid)
AC_CHECK_LIB([e2p], [e2p_os2string], , need_lib e2p)
AC_CHECK_LIB([ext2fs], [ext2fs_read_bb_FILE], , need_lib ext2fs)
AC_CHECK_LIB([uuid], [uuid_generate], , need_lib uuid)
AC_CHECK_LIB([bz2], [BZ2_bzRead],
	     	BZ2LIB="-lbz2"; BZ2MODULES="archieve2_files_descr.o"; BZ2C="", \
		BZ2LIB=""; BZ2MODULES=""; BZ2C="//")

XFS_UTILS=""; BUILD_XFS="";
AC_CHECK_LIB([rt], [aio_init],
AC_CHECK_LIB([disk], [fstype], 
AC_CHECK_LIB([xfs], [libxfs_purgebuf], 
	     XFS_UTILS="build_xfs_util"; BUILD_XFS="build_xfs", , -lrt))) 
	
AC_SUBST(EXT2FS_CFLAGS EXT2FS_LIBS)
AC_SUBST(BZ2LIB BZ2MODULES BZ2C)
AC_SUBST(MPEG2_LIBS MPEG2_CFLAGS MPEG2_MODULES MPEG2C)
AC_SUBST(XFS_UTILS BUILD_XFS)

DESTDIR=
AC_SUBST(DESTDIR)

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h sys/ioctl.h sys/vfs.h unistd.h])
AC_CHECK_HEADERS([libintl.h locale.h], LANGS="ru", LANGS="")
AC_SUBST(LANGS)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_CHECK_MEMBERS([struct stat.st_rdev])

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([memset putenv setlocale strcasecmp strchr strdup strerror strrchr strstr strtol strtoul strtoull uname])

#AC_CONFIG_FILES([Makefile
#                 anyfs/Makefile
#                 doc/Makefile
#                 doc/man/Makefile
#                 doc/man/man5/Makefile
#                 doc/man/man8/Makefile
#                 doc/man/ru/Makefile
#                 doc/man/ru/man5/Makefile
#                 doc/man/ru/man8/Makefile
#                 src/Makefile
#                 src/anysurrect/Makefile])

AC_OUTPUT(Makefile 
	anyfs/Makefile 
	doc/man/man3/Makefile
	doc/man/man5/Makefile
	doc/man/man8/Makefile
	doc/man/ru/man3/Makefile
	doc/man/ru/man5/Makefile
	doc/man/ru/man8/Makefile
	src/Makefile 
	src/anysurrect/Makefile 
	src/anysurrect/surrectlist.conf
	src/anysurrect/gzip/Makefile 
	src/anysurrect/scan_pes/Makefile
	src/build_e2fs/Makefile
	src/build_xfs/Makefile
	include/Makefile
	libany/Makefile
	scripts/Makefile
	po/Makefile
	include/somepaths.h)

if test -z "$MPEG2_LIBS" || test -z "$BZ2LIB" || test -z "$BUILD_XFS"; then
	echo
	echo "WARNING! The package configured successful, but the next features was disabled:"
	echo
	test -z "$MPEG2_LIBS" &&
		echo "* Mpeg2 recovering with anysurrect (depends on libmpeg2)"
	test -z "$BZ2LIB" &&
		echo "* BZIP2 recovering with anysurrect (depends on libbz2)"
	test -z "$BUILD_XFS" &&
		echo "* Building XFS filesystem (depends on xfsprogs>=2.8.10, librt)"
fi

true
